syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.ane";
option java_outer_classname = "PIX";
option objc_class_prefix = "HLW";

package br.com.ane;

service DesafioRegistraPixService {
  rpc registra (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}

service DesafioDeletaPixService{
  rpc deleta (DeletaChavePixRequest) returns (DeletaChavePixResponse) {}
}

enum TipoConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

enum TipoChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  ALEATORIA = 4;
}

message RegistraChavePixRequest {
  string clienteId = 1;
  TipoChave tipoChave = 2;
  string chave = 3;
  TipoConta tipoConta = 4;
}

message RegistraChavePixResponse{
  string clienteId = 1;
  string pixId = 2;
}

message DeletaChavePixRequest{
  string clienteId = 1;
  string pixId = 2;
}

message DeletaChavePixResponse{
  string clienteId = 1;
  string pixId = 2;
}